# chatapp

./: .gitignore  Cargo.toml  build.rs  package.json
src/: main.rs
static/: main.css  mainp.css
templates/: index.html
