[package]
name = "chatapp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
axum="0.8.4"
futures = "0.3.31"
http = "1.3.1"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde_json="1.0"
tokio = { version = "1.47.1", features = ["full", "macros", "sync"] }
tokio-util = "0.7.16"


